# interactive-dmd

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  dmdReconstruct.cpp  resources.qrc
ManipulateCPs/: AddHoverInfoPushButton.cpp  CpViewer.cpp  DataAugmentationDialog.cpp  ManipulateCPs.cpp  edge.cpp
conan-dependencies-recipes/: create_dependecies_packages.bash  remove_dependencies_packages.bash  update_package.bash
conan-dependencies-recipes/IcicleMorphotreeWidget/: conanfile.py
conan-dependencies-recipes/ImageViewerWidget/: conanfile.py
conan-dependencies-recipes/Skel/: conanfile.py
conan-dependencies-recipes/Spline/: conanfile.py
conan-dependencies-recipes/morphotree/: conanfile.py
images/: CC-id=212.pgm  art1-line.pgm  art1.pgm  art2.pgm  art_deco.pgm  l146.pgm  l240.pgm  panda.pgm  simple-image.pgm
include/: InteractiveSdmd.hpp  MainWidget.hpp  MainWindow.hpp  dmdProcess.hpp  dmdReconstruct.hpp
include/CustomWidgets/: AreaTreeFilteringDialog.hpp  ClosableDockWidget.hpp  CollapsableWidget.hpp  LabelWithProgressBar.hpp  OrientablePushButton.hpp  ThresholdControl.hpp  TitleColorBar.hpp
include/ManipulateCPs/: AddHoverInfoPushButton.hpp  ControlPoint.hpp  CpViewer.hpp  DataAugmentationDialog.hpp  ManipulateCPs.hpp  ShowDegreeColorWidget.hpp  edge.hpp  node.hpp
include/SDMD/: InteractiveSdmd.hpp  dmdProcess.hpp  dmdReconstruct.hpp
include/TreeVisualiser/: AttributeComputer.hpp  RecNodeButton.hpp  SimpleImageViewer.hpp  TreeVisualiser.hpp  TreeVisualiser.old  TreeVisualiserStylePanel.hpp
src/: InteractiveSdmd.cpp  MainWidget.cpp  MainWindow.cpp  controlPoints.txt  dmdProcess.cpp  dmdReconstruct.cpp  main.cpp  scribbleWidget.cpp
src/CustomWidgets/: AreaTreeFilteringDialog.cpp  ClosableDockWidget.cpp  CollapsableWidget.cpp  LabelWithProgressBar.cpp  OrientablePushButton.cpp  ThresholdControl.cpp  TitleColorBar.cpp
src/ManipulateCPs/: CpViewer.cpp  DataAugmentationDialog.cpp  ManipulateCPs.cpp  ShowDegreeColorWidget.cpp  edge.cpp  node.cpp
src/SDMD/: InteractiveSdmd.cpp  dmdProcess.cpp  dmdReconstruct.cpp  scribbleWidget.cpp
src/TreeVisualiser/: AttributeComputer.cpp  RecNodeButton.cpp  SimpleImageViewer.cpp  TreeVisualiser.cpp  TreeVisualiser.old  TreeVisuliserStylePanel.cpp
